<resources>
    <string name="app_name">Chat App</string>
    <string name="auth_register_failed">Couldn\'t create an account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="messages">Messages</string>
    <string name="registered_failed_try_again">Registered failed, try again</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="forget_password">Forget Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create an Account</string>
    <string name="slide_to_cancel">Slide to Cancel</string>
    <string name="message">Message</string>
    <string name="something_is_wrong">Something went wrong</string>
    <string name="all_fields_are_requried">All fields are required</string>
    <string name="couldnot_sign_in">Registration failed</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="empty_user_name">Empty Name</string>
    <string name="small_name">Small Name</string>
    <string name="large_name">Large Name</string>
    <string name="empty_email">Empty Email</string>
    <string name="password_cannot_have_space">Password cannot have spaces</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="password_must_be_above_eight">Password must be more than 8 characters</string>
    <string name="insert_your_email_to_reset">Write your email to reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="instruction_to_reset">We\'ve sent instruction to your email in order to reset your password</string>
    <string name="failed_to_reset">We\'ve failed in resetting your password</string>
    <string name="empty_list">No Message Found</string>
    <string name="loading">Loading</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="name_is_not_valid">Name is not valid</string>
    <string name="password_is_too_small">Password is too small</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_phone">Invalid Phone</string>
    <string name="yesterday">Yesterday</string>
    <string name="you_do_not_have_gallery_app">You do not have gallery app</string>
    <string name="enter_file_name">Enter file Name</string>
    <string name="permission_rejected">Permission Rejected</string>
    <string name="couldnot_upload_voice_note">Couldn\'t upload voice note</string>
    <string name="couldnot_record_voice_note">Couldn\'t record voice note</string>
    <string name="max_voice_note_2_mins">Maximum Voice Note Time is 2 minutes</string>
    <string name="today">Today</string>
    <string name="images">Images</string>
    <string name="galleries">Galleries</string>
    <string name="done">Done</string>
    <string name="you_have_reached_your_max">Maximum Picture Selection is 1</string>
    <string name="couldnot_connect_to_server">Couldn\'t connect to server</string>
    <string name="failed_to_send_voice_note">Failed to send voice note</string>
    <string name="uploading_failed">Uploading failed, trying again</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="unavailable">Unavailable</string>
    <string name="typing">Typing</string>
</resources>