<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ID_login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ID_reset_password_toolbar"
        app:titleTextColor="@color/white"
        style="@style/toolbar"
        app:title="@string/forget_password"
        >

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/insert_your_email_to_reset"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:contentDescription="@string/email"
        android:labelFor="@+id/ID_reset_email"
        android:textColorHint="@color/grey1"
        app:hintTextAppearance="@style/HintText">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ID_reset_email"
            style="@style/LoginButton"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Login Button -->

    <Button
        android:padding="4dp"
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/cornered_button"
        android:text="@string/reset_password"
        android:textColor="@android:color/white"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="12dp"
        android:visibility="gone" />

</LinearLayout>

</ScrollView>

