<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ID_login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="164dp"
            android:layout_height="164dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ID_txt_input_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon"
            android:layout_marginTop="30dp"
            android:accessibilityLiveRegion="polite"
            android:contentDescription="@string/email"
            android:labelFor="@+id/ID_log_email"
            android:textColorHint="@color/grey1"
            app:hintTextAppearance="@style/HintText">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ID_log_email"
                style="@style/LoginButton"
                android:layout_below="@id/icon"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ID_txt_input_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ID_txt_input_1"
            android:accessibilityLiveRegion="polite"
            android:contentDescription="@string/password"
            android:labelFor="@+id/ID_log_password"
            android:textColorHint="@color/grey1"
            app:hintTextAppearance="@style/HintText">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ID_log_password"
                style="@style/LoginButton"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ID_reset_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:background="@drawable/cornered_button"
            android:text="@string/sign_in"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/ID_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ID_txt_input_2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:text="@string/forget_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/bnb_so_dark_blue_color" />

        <Button
            android:id="@+id/ID_donthaveAccount_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ID_log_progress_bar"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:background="@android:color/transparent"
            android:text="@string/register"
            android:textColor="@color/black" />

        <ProgressBar
            android:id="@+id/ID_log_progress_bar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@id/email_sign_in_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>